--- a/polbot-core/src/main/resources/templates/collectiveorder.html
+++ b/polbot-core/src/main/resources/templates/collectiveorder.html
@@ -12,10 +12,19 @@
     <title>Shop Item - Start Bootstrap Template</title>
 
     <link rel="stylesheet" type="text/css"
-          href="../webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
 
     <!-- Custom CSS -->
     <link th:href="@{/css/shop-item.css}" href="../../css/shop-item.css" rel="stylesheet"/>
+
+    <!-- jQuery -->
+    <script th:src="@{/js/jquery.js}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+
+    <script th:src="@{/js/mustache.min.js}"></script>
+    <script th:src="@{/js/polBotScript.js}"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,8 +68,7 @@
 <div class="container">
 
 
-    <form action="#" th:action="@{/orders/collectiveOrders?startorder=}" th:object="${collectiveCurrencyOrder}" method="post">
-
+    <form action="#" th:action="@{/orders/collectiveOrders/{buid}(startorder='',buid=${buid})}" th:object="${collectiveCurrencyOrder}" method="post">
 
 
         <div class="form-group">
@@ -122,13 +130,6 @@
 <div class="container">
     <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
-<!-- jQuery -->
-<script src="../js/jquery.js"></script>
-<script src="../js/mustache.min.js"></script>
-<script src="../js/polBotScript.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="../js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
