--- a/polbot-core/src/main/resources/templates/collectiveorder.html
+++ b/polbot-core/src/main/resources/templates/collectiveorder.html
@@ -68,7 +68,8 @@
 <div class="container">
 
 
-    <form action="#" th:action="@{/orders/collectiveOrders/{buid}(startorder='',buid=${buid})}" th:object="${collectiveCurrencyOrder}" method="post">
+    <form action="#" th:action="@{/orders/collectiveOrders/{buid}(startorder='',buid=${buid})}"
+          th:object="${collectiveCurrencyOrder}" method="post">
 
 
         <div class="form-group">
@@ -104,13 +105,11 @@
         </div>
 
         <div class="form-group">
-            <label for="inputtotalBtcAmount"> Btc Amount:</label>
+            <label for="inputtotalBtcAmount"> Btc Budget:</label>
             <input id="inputtotalBtcAmount" class="form-control" type="text" th:field="*{totalBtcAmount}"
                    th:errorclass="fieldError"/>
 
         </div>
-
-
 
 
         <div class="submit">
