--- a/polbot-core/src/main/resources/templates/tradehistory.html
+++ b/polbot-core/src/main/resources/templates/tradehistory.html
@@ -1,116 +1,147 @@
-<!-- Styles -->
-<style>
-    #chartdiv {
-        width: 100%;
-        height: 500px;
-    }
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-</style>
+<head>
 
-<!-- Resources -->
-<script src="https://www.amcharts.com/lib/3/amcharts.js"></script>
-<script src="https://www.amcharts.com/lib/3/serial.js"></script>
-<script src="https://www.amcharts.com/lib/3/plugins/export/export.min.js"></script>
-<link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all"/>
-<script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
 
-<!-- Chart code -->
-<script>
-    var chart = AmCharts.makeChart("chartdiv", {
-        "type": "serial",
-        "theme": "light",
-        "marginRight": 40,
-        "marginLeft": 40,
-        "autoMarginOffset": 20,
-        "mouseWheelZoomEnabled": true,
-        "dataDateFormat": "YYYY-MM-DD",
-        "valueAxes": [{
-            "id": "v1",
-            "axisAlpha": 0,
-            "position": "left",
-            "ignoreAxisWidth": true
-        }],
-        "balloon": {
-            "borderThickness": 1,
-            "shadowAlpha": 0
-        },
-        "graphs": [{
-            "id": "g1",
-            "balloon": {
-                "drop": true,
-                "adjustBorderColor": false,
-                "color": "#ffffff"
-            },
-            "bullet": "round",
-            "bulletBorderAlpha": 1,
-            "bulletColor": "#FFFFFF",
-            "bulletSize": 5,
-            "hideBulletsCount": 50,
-            "lineThickness": 2,
-            "title": "red line",
-            "useLineColorForBulletBorder": true,
-            "valueField": "value",
-            "balloonText": "<span style='font-size:18px;'>[[value]]</span>"
-        }],
-        "chartScrollbar": {
-            "graph": "g1",
-            "oppositeAxis": false,
-            "offset": 30,
-            "scrollbarHeight": 80,
-            "backgroundAlpha": 0,
-            "selectedBackgroundAlpha": 0.1,
-            "selectedBackgroundColor": "#888888",
-            "graphFillAlpha": 0,
-            "graphLineAlpha": 0.5,
-            "selectedGraphFillAlpha": 0,
-            "selectedGraphLineAlpha": 1,
-            "autoGridCount": true,
-            "color": "#AAAAAA"
-        },
-        "chartCursor": {
-            "pan": true,
-            "valueLineEnabled": true,
-            "valueLineBalloonEnabled": true,
-            "cursorAlpha": 1,
-            "cursorColor": "#258cbb",
-            "limitToGraph": "g1",
-            "valueLineAlpha": 0.2,
-            "valueZoomable": true
-        },
-        "valueScrollbar": {
-            "oppositeAxis": false,
-            "offset": 50,
-            "scrollbarHeight": 10
-        },
-        "categoryField": "date",
-        "categoryAxis": {
-            "parseDates": true,
-            "dashLength": 1,
-            "minorGridEnabled": true
-        },
-        "export": {
-            "enabled": true
-        },
-        "fieldMappings": [{
-            "fromField": "start",
-            "toField": "date"
-        }, {
-            "fromField": "buy",
-            "toField": "value"
-        }],
-        "dataLoader": {
-            "url": "tradehistory/BTC_ETC"
+    <!-- Styles -->
+    <style>
+        #chartdiv {
+            width: 100%;
+            height: 500px;
         }
-    });
 
-    //chart.addListener("rendered", zoomChart);
+    </style>
 
-    zoomChart();
 
-    function zoomChart() {
-        chart.zoomToIndexes(chart.dataProvider.length - 40, chart.dataProvider.length - 1);
-    }
-</script>
+    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all"/>
+
+    <script th:src="@{/amcharts/amcharts/amcharts.js}" src="../../amcharts/amcharts/amcharts.js"
+            type="text/javascript"></script>
+    <script th:src="@{/amcharts/amcharts/serial.js}" src="../../amcharts/amcharts/serial.js"
+            type="text/javascript"></script>
+    <script th:src="@{/amcharts/amcharts/amstock.js}" src="../../amcharts/amcharts/amstock.js"
+            type="text/javascript"></script>
+    <link rel="stylesheet" th:href="@{/amcharts/amcharts/style.css}" href="../../amcharts/amcharts/style.css"
+          type="text/css"/>
+
+    <script th:src="@{/amcharts/amcharts/plugins/responsive/responsive.js}"
+            src="../../amcharts/amcharts/plugins/responsive/responsive.js" type="text/javascript"></script>
+
+    <script th:src="@{/amcharts/amcharts/plugins/dataloader/dataloader.min.js}"
+            src="../../amcharts/amcharts/plugins/responsive/dataloader.min.js" type="text/javascript"></script>
+
+    <script th:src="@{/js/stockChart.js}" src="../../js/dataSource.js"
+            type="text/javascript"></script>
+
+    <!-- Chart code -->
+    <script>
+        var chart = AmCharts.makeChart("chartdiv", {
+            "type": "serial",
+            "theme": "light",
+            "marginRight": 40,
+            "marginLeft": 40,
+            "autoMarginOffset": 20,
+            "mouseWheelZoomEnabled": true,
+            "dataDateFormat": "YYYY-MM-DD",
+            "valueAxes": [{
+                "id": "v1",
+                "axisAlpha": 0,
+                "position": "left",
+                "ignoreAxisWidth": true
+            }],
+            "balloon": {
+                "borderThickness": 1,
+                "shadowAlpha": 0
+            },
+            "graphs": [{
+                "id": "g1",
+                "balloon": {
+                    "drop": true,
+                    "adjustBorderColor": false,
+                    "color": "#ffffff"
+                },
+                "bullet": "round",
+                "bulletBorderAlpha": 1,
+                "bulletColor": "#FFFFFF",
+                "bulletSize": 5,
+                "hideBulletsCount": 50,
+                "lineThickness": 2,
+                "title": "red line",
+                "useLineColorForBulletBorder": true,
+                "valueField": "buy",
+                "balloonText": "[[buy]]-[[start]]"
+            },{
+                "id": "g2",
+                "balloon": {
+                    "drop": true,
+                    "adjustBorderColor": false,
+                    "color": "#ff00ff"
+                },
+                "bullet": "round",
+                "bulletBorderAlpha": 1,
+                "bulletColor": "#FF00FF",
+                "bulletSize": 5,
+                "hideBulletsCount": 50,
+                "lineThickness": 2,
+                "title": "red line",
+                "useLineColorForBulletBorder": true,
+                "valueField": "sell",
+                "balloonText": "[[sell]]-[[start]]"
+            }],
+
+            "chartScrollbar": {
+                "graph": "g1",
+                "oppositeAxis": false,
+                "offset": 30,
+                "scrollbarHeight": 80,
+                "backgroundAlpha": 0,
+                "selectedBackgroundAlpha": 0.1,
+                "selectedBackgroundColor": "#888888",
+                "graphFillAlpha": 0,
+                "graphLineAlpha": 0.5,
+                "selectedGraphFillAlpha": 0,
+                "selectedGraphLineAlpha": 1,
+                "autoGridCount": true,
+                "color": "#AAAAAA"
+            },
+            "categoryField": "start",
+            "categoryAxis": {
+                "parseDates": true,
+                "dashLength": 1,
+                "minorGridEnabled": true,
+                "minPeriod":"15mm"
+            },
+            "export": {
+                "enabled": true
+            },
+            "dataLoader": {
+                "url": "tradehistory/BTC_ETC","postProcess":postProcess
+            }
+
+        });
+
+        chart.addListener("rendered", zoomChart);
+
+
+        function zoomChart() {
+            chart.zoomToIndexes(chart.dataProvider.length - 40, chart.dataProvider.length - 1);
+        }
+    </script>
+
+</head>
+
+<body>
 
 <!-- HTML -->
 <div id="chartdiv"></div>
+
+
+</body>
+
+</html>
