--- a/polbot-core/src/main/resources/templates/tradehistory.html
+++ b/polbot-core/src/main/resources/templates/tradehistory.html
@@ -9,6 +9,9 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
 
+    <title>Poloneix Bot</title>
+
+
     <!-- Styles -->
     <style>
         #chartdiv {
@@ -18,6 +21,17 @@
 
     </style>
 
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
+
+    <!-- jQuery -->
+    <script th:src="@{/js/jquery.js}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+
+    <!-- Custom CSS -->
+    <link th:href="@{/css/shop-item.css}" href="../../css/shop-item.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all"/>
 
@@ -49,6 +63,20 @@
             "autoMarginOffset": 20,
             "mouseWheelZoomEnabled": true,
             "dataDateFormat": "YYYY-MM-DD",
+            "legend": {
+                "equalWidths": false,
+                "periodValueText": "",
+                "position": "top",
+                "valueAlign": "left",
+                "valueWidth": 100,
+                "listeners": [{
+                    "event": "hideItem",
+                    "method": legendHandler
+                }, {
+                    "event": "showItem",
+                    "method": legendHandler
+                }]
+            },
             "valueAxes": [{
                 "id": "v1",
                 "axisAlpha": 0,
@@ -72,11 +100,11 @@
                 "bulletSize": 5,
                 "hideBulletsCount": 50,
                 "lineThickness": 2,
-                "title": "red line",
+                "title": "Buy Volume",
                 "useLineColorForBulletBorder": true,
-                "valueField": "buy",
-                "balloonText": "[[buy]]-[[start]]"
-            },{
+                "valueField": "buy", "type": "column",
+                "balloonText": "buy - [[buy]]-[[start]]"
+            }, {
                 "id": "g2",
                 "balloon": {
                     "drop": true,
@@ -89,10 +117,47 @@
                 "bulletSize": 5,
                 "hideBulletsCount": 50,
                 "lineThickness": 2,
-                "title": "red line",
+                "title": "Sell Volume",
+
+                "useLineColorForBulletBorder": true,
+                "valueField": "sell", "type": "column",
+                "balloonText": "sell - [[sell]]-[[start]]"
+            }, {
+                "id": "g3",
+                "balloon": {
+                    "drop": true,
+                    "adjustBorderColor": false,
+                    "color": "#ff00ff"
+                },
+                "bullet": "round",
+                "bulletBorderAlpha": 1,
+                "bulletColor": "#FFFFFF",
+                "bulletSize": 5,
+                "hideBulletsCount": 50,
+                "lineThickness": 2,
+                "title": "Buy Volume Line",
+
+                "useLineColorForBulletBorder": true,
+                "valueField": "buy",
+                "balloonText": "buy - [[buy]]-[[start]]"
+            }, {
+                "id": "g2",
+                "balloon": {
+                    "drop": true,
+                    "adjustBorderColor": false,
+                    "color": "#ff00ff"
+                },
+                "bullet": "round",
+                "bulletBorderAlpha": 1,
+                "bulletColor": "#FF00FF",
+                "bulletSize": 5,
+                "hideBulletsCount": 50,
+                "lineThickness": 2,
+                "title": "Sell Volume Line",
+
                 "useLineColorForBulletBorder": true,
                 "valueField": "sell",
-                "balloonText": "[[sell]]-[[start]]"
+                "balloonText": "sell - [[sell]]-[[start]]"
             }],
 
             "chartScrollbar": {
@@ -115,13 +180,13 @@
                 "parseDates": true,
                 "dashLength": 1,
                 "minorGridEnabled": true,
-                "minPeriod":"15mm"
+                "minPeriod": "15mm"
             },
             "export": {
                 "enabled": true
             },
             "dataLoader": {
-                "url": "tradehistory/BTC_ETC","postProcess":postProcess
+                "url": "tradehistory/BTC_ETC", "postProcess": postProcess
             }
 
         });
@@ -138,10 +203,47 @@
 
 <body>
 
+<div th:replace="header :: header">
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                </button>
+                <a class="navbar-brand" href="/">PolBot</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">Page1</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+</div>
+
+
 <!-- HTML -->
 <div id="chartdiv"></div>
 
 
+<div class="container">
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
+</div>
+
 </body>
 
 </html>
+
+
+
+
+
+
