--- a/polbot-core/src/main/resources/templates/tradehistory.html
+++ b/polbot-core/src/main/resources/templates/tradehistory.html
@@ -106,8 +106,8 @@
                 "lineThickness": 2,
                 "title": "Buy Volume",
                 "useLineColorForBulletBorder": true,
-                "valueField": "buy", "type": "column",
-                "balloonText": "buy - [[buy]]-[[start]]"
+                "valueField": "buyVol",
+                "balloonText": "buy - [[buyVol]]-[[start]]"
             }, {
                 "id": "g2",
                 "balloon": {
@@ -124,8 +124,8 @@
                 "title": "Sell Volume",
 
                 "useLineColorForBulletBorder": true,
-                "valueField": "sell", "type": "column",
-                "balloonText": "sell - [[sell]]-[[start]]"
+                "valueField": "sellVol",
+                "balloonText": "sell - [[sellVol]]-[[start]]"
             }, {
                 "id": "g3",
                 "balloon": {
@@ -142,8 +142,8 @@
                 "title": "Buy Volume Line",
 
                 "useLineColorForBulletBorder": true,
-                "valueField": "buy",
-                "balloonText": "buy - [[buy]]-[[start]]"
+                "valueField": "buyQVol",
+                "balloonText": "buy - [[buyQVol]]-[[start]]"
                 , "hidden": true
             }, {
                 "id": "g4",
@@ -161,8 +161,8 @@
                 "title": "Sell Volume Line",
 
                 "useLineColorForBulletBorder": true,
-                "valueField": "sell",
-                "balloonText": "sell - [[sell]]-[[start]]"
+                "valueField": "sellQVol",
+                "balloonText": "sell - [[sellQVol]]-[[start]]"
                 , "hidden": true
             }],
 
