--- a/polbot-core/src/main/resources/templates/tradehistory.html
+++ b/polbot-core/src/main/resources/templates/tradehistory.html
@@ -54,7 +54,7 @@
             type="text/javascript"></script>
     <!-- Chart code -->
     <script th:inline="javascript">
-        var url = "/gettradehistory/BTC_ETC/" + [[${period}]];
+        var url = "/gettradehistory/"+[[${currPair}]]+"/" + [[${period}]];
     </script>
 
     <!-- Chart code -->
@@ -139,7 +139,7 @@
                 "bulletSize": 5,
                 "hideBulletsCount": 50,
                 "lineThickness": 2,
-                "title": "Buy Volume Line",
+                "title": "Buy Quote Volume",
 
                 "useLineColorForBulletBorder": true,
                 "valueField": "buyQVol",
@@ -158,7 +158,7 @@
                 "bulletSize": 5,
                 "hideBulletsCount": 50,
                 "lineThickness": 2,
-                "title": "Sell Volume Line",
+                "title": "Sell Quote Volume",
 
                 "useLineColorForBulletBorder": true,
                 "valueField": "sellQVol",
@@ -240,12 +240,12 @@
 <div id="chartdiv"></div>
 
 <div class="btn-group" role="group" aria-label="Basic example">
-    <a href="/tradehistory/BTC_ETC/15mm" type="button" class="btn btn-secondary">15m</a>
-    <a href="/tradehistory/BTC_ETC/30mm" type="button" class="btn btn-secondary">30m</a>
-    <a href="/tradehistory/BTC_ETC/hh" type="button" class="btn btn-secondary">1h</a>
-    <a href="/tradehistory/BTC_ETC/1d" type="button" class="btn btn-secondary">1d</a>
-    <a href="/tradehistory/BTC_ETC/1w" type="button" class="btn btn-secondary">1w</a>
-    <a href="/tradehistory/BTC_ETC/1m" type="button" class="btn btn-secondary">1m</a>
+    <a th:href="@{/tradehistory/{currPair}/15mm(currPair=${currPair})}" type="button" class="btn btn-secondary">15m</a>
+    <a th:href="@{/tradehistory/{currPair}/30mm(currPair=${currPair})}" type="button" class="btn btn-secondary">30m</a>
+    <a th:href="@{/tradehistory/{currPair}/hh(currPair=${currPair})}" type="button" class="btn btn-secondary">1h</a>
+    <a th:href="@{/tradehistory/{currPair}/1d(currPair=${currPair})}" type="button" class="btn btn-secondary">1d</a>
+    <a th:href="@{/tradehistory/{currPair}/1w(currPair=${currPair})}" type="button" class="btn btn-secondary">1w</a>
+    <a th:href="@{/tradehistory/{currPair}/1m(currPair=${currPair})}" type="button" class="btn btn-secondary">1m</a>
 </div>
 
 <br/>
