bot selection screen fixed
old bot classes removed

login success handler updates login time for user

--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -155,10 +155,10 @@
 
                             </div>
                             <div class="form-group">
-                                <label th:for="inputBuyOrderCancellationHour" th:text="#{currencyconfig.buyOrderCancellationHour} "/>
+                                <label th:for="inputBuyOrderCancellationHour" th:text="#{currencyconfig.orderTimeoutInHour} "/>
 
 
-                                <input type="text" id="inputBuyOrderCancellationHour" th:field="*{buyOrderCancellationHour}"  class="form-control"
+                                <input type="text" id="inputBuyOrderCancellationHour" th:field="*{orderTimeoutInHour}"  class="form-control"
                                        th:errorclass="fieldError"/>
 
 
