--- a/polbot-core/src/main/resources/templates/mycurrencies.html
+++ b/polbot-core/src/main/resources/templates/mycurrencies.html
@@ -135,7 +135,7 @@
                                             <td th:text="${cc.sellAtPrice}">0.0025</td>
                                             <td><input disabled="true" type="checkbox" th:checked="${cc.buyable}"/></td>
                                             <td><input disabled="true" type="checkbox" th:checked="${cc.sellable}"/>
-                                            <td th:text="${cc.buyOrderCancellationHour}">0.0025</td>
+                                            <td th:text="${cc.orderTimeoutInHour}">0.0025</td>
                                             </td>
                                             <td>
                                                 <div class="submit">
