--- a/polbot-core/src/main/resources/templates/openOrders.html
+++ b/polbot-core/src/main/resources/templates/openOrders.html
@@ -149,41 +149,35 @@
         EXCHANGE
     </h3>
     <div th:each="entry: ${userOpenOrders}">
-        <span th:text="${entry.key}"></span>
+        <span class="" th:text="${entry.key}"></span>
 
         <table class='table table-hover table-bordered table-striped'>
-            <thead>
+            <thead  class="thead-inverse">
             <tr>
-                <td>
+                <th>
                     Type
-                </td>
-                <td>
+                </th>
+                <th>
                     Price (BTC)
-                </td>
-                <td>
+                </th>
+                <th>
                     Amount (<span th:text="${entry.key}"></span>)
-                </td>
-                <td>
+                </th>
+                <th>
                     Total (BTC)
-                </td>
-                <td>
+                </th>
+                <th>
                     Date
-                </td>
-                <td>
-                    Action
-                </td>
+                </th>
             </tr>
             </thead>
-            <tbody th:each="poloniexOpenOrder :  ${entry.value}">
-            <tr th:attr="data-open-order-row=${poloniexOpenOrder.orderNumber}">
+            <tbody >
+            <tr th:each="poloniexOpenOrder :  ${entry.value}"  th:class="${poloniexOpenOrder.type.equals('buy') ? 'warning' : 'success'}"  th:attr="data-open-order-row=${poloniexOpenOrder.orderNumber}">
                 <td th:text="${poloniexOpenOrder.type}"></td>
                 <td th:text="${poloniexOpenOrder.rate}"></td>
                 <td th:text="${poloniexOpenOrder.amount}"></td>
                 <td th:text="${poloniexOpenOrder.total}"></td>
-                <td th:text="${poloniexOpenOrder.date}"></td>
-                <td></td>
-                <td><span class="btn btn-link"
-                          th:attr="data-open-order-cancel=${poloniexOpenOrder.orderNumber}">Cancel</span></td>
+                <td th:text="${#dates.format(poloniexOpenOrder.date, 'dd-MM-yyyy HH:mm')}" ></td>
             </tr>
             </tbody>
         </table>
