--- a/polbot-core/src/main/resources/templates/profitanalysis.html
+++ b/polbot-core/src/main/resources/templates/profitanalysis.html
@@ -40,6 +40,35 @@
 
     </script>
 
+
+    <script th:src="@{/amcharts/amcharts/amcharts.js}" src="../../amcharts/amcharts/amcharts.js"
+            type="text/javascript"></script>
+    <script th:src="@{/amcharts/amcharts/serial.js}" src="../../amcharts/amcharts/serial.js"
+            type="text/javascript"></script>
+    <script th:src="@{/amcharts/amcharts/amstock.js}" src="../../amcharts/amcharts/amstock.js"
+            type="text/javascript"></script>
+    <link rel="stylesheet" th:href="@{/amcharts/amcharts/style.css}" href="../../amcharts/amcharts/style.css"
+          type="text/css"/>
+
+    <script th:src="@{/amcharts/amcharts/plugins/responsive/responsive.js}"
+            src="../../amcharts/amcharts/plugins/responsive/responsive.js" type="text/javascript"></script>
+
+    <script th:src="@{/amcharts/amcharts/plugins/dataloader/dataloader.min.js}"
+            src="../../amcharts/amcharts/plugins/responsive/dataloader.min.js" type="text/javascript"></script>
+
+    <script th:src="@{/js/stockChart.js}" src="../../js/dataSource.js"
+            type="text/javascript"></script>
+
+    <script th:inline="javascript" type="text/javascript">
+        /*<![CDATA[*/
+
+        var currency = [[${analysisConfig.currencyPair}]];
+        var buys = eval([[${buys}]]);
+        var sells = eval([[${sells}]]);
+        addStockChart(currency);
+        /*]]>*/
+    </script>
+
 </head>
 
 <body>
@@ -78,7 +107,6 @@
         <div class="col-md-12">
 
             <div class="thumbnail">
-                <div id="chartdiv" style="width:800px; height:1px;"></div>
 
                 <div class="well">
 
@@ -163,6 +191,17 @@
 
                             </div>
 
+
+                            <div class="form-group">
+                                <label for="selectBot"> Bot:</label>
+                                <div class="form-group blu-margin">
+                                    <select id="selectBot" class="form-control" th:field="*{botName}">
+                                        <option value="0" label="select bot"></option>
+                                        <option th:each="bot : ${bots}" th:value="${bot.name}" th:text="${bot.name}"></option>
+                                    </select>
+                                </div>
+                            </div>
+
                             <div>
 
                                 <div class="submit">
@@ -189,6 +228,10 @@
 
                                     <br/><br/>
 
+                                    <div id="chartdiv" style="width:100%; height:600px;"></div>
+
+                                    <br/><br/>
+
                                     <table id="ctable" th:if="${result != null}"
                                            class="table table-responsive table-striped table-bordered"
                                            cellspacing="0" width="100%">
@@ -205,11 +248,11 @@
 
                                         <tbody>
                                         <tr th:each="cc : ${result.get('history')}">
-                                            <td th:text="${cc.date}">2017-05-01 10:20:00</td>
+                                            <td th:text="${#dates.format(cc.date, 'yyyy-MM-dd hh:mm:ss')}">2017-05-01 10:20:00</td>
                                             <td th:text="${cc.rate}">25</td>
                                             <td th:text="${cc.amount}">5</td>
                                             <td th:text="${cc.total}">5</td>
-                                            <td th:text="${cc.fee}">0.0025</td>
+                                            <td th:text="${#numbers.formatDecimal(cc.fee, 0, 'DEFAULT', 4, 'DEFAULT')}">0.0025</td>
                                             <td th:text="${cc.type}">BUY</td>
                                         </tr>
                                         </tbody>
