--- a/polbot-core/src/main/resources/templates/profitanalysis.html
+++ b/polbot-core/src/main/resources/templates/profitanalysis.html
@@ -56,7 +56,7 @@
     <script th:src="@{/amcharts/amcharts/plugins/dataloader/dataloader.min.js}"
             src="../../amcharts/amcharts/plugins/responsive/dataloader.min.js" type="text/javascript"></script>
 
-    <script th:src="@{/js/stockChart.js}" src="../../js/dataSource.js"
+    <script th:src="@{/js/profitabilityAnalysis.js}" src="../../js/profitabilityAnalysis.js"
             type="text/javascript"></script>
 
     <script th:inline="javascript" type="text/javascript">
@@ -248,7 +248,7 @@
 
                                         <tbody>
                                         <tr th:each="cc : ${result.get('history')}">
-                                            <td th:text="${#dates.format(cc.date, 'yyyy-MM-dd hh:mm:ss')}">2017-05-01 10:20:00</td>
+                                            <td th:text="${#dates.format(cc.date, 'yyyy-MM-dd HH:mm:ss')}">2017-05-01 10:20:00</td>
                                             <td th:text="${cc.rate}">25</td>
                                             <td th:text="${cc.amount}">5</td>
                                             <td th:text="${cc.total}">5</td>
